Add "Latest Build" link with Google Drive icon

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -155,8 +155,8 @@ a.button span {
 #download-zip span {
   background: transparent url(../images/zip-icon.png) 12px 50% no-repeat;
 }
-#download-tar-gz span {
-  background: transparent url(../images/tar-gz-icon.png) 12px 50% no-repeat;
+#download-build span {
+  background: transparent url(../images/google-drive-icon.png) 12px 50% no-repeat;
 }
 #view-on-github span {
   background: transparent url(../images/octocat-icon.png) 12px 50% no-repeat;
@@ -355,7 +355,7 @@ footer a:hover {
   #downloads {
     margin-bottom: 25px;
   }
-  #download-zip, #download-tar-gz {
+  #download-zip, #download-build {
     display: none;
   }
   .inner {
